[package]
name = "wayback-rpki"
version = "0.0.1"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
edition = "2021"
default-run="wayback-rpki"

[[bin]]
name = "wayback-rpki"
path = "src/bin/updater.rs"


[dependencies]

anyhow = "1"
chrono = "0.4.22"
diesel = {version= "2.0.3", features=["postgres", "r2d2", "chrono", "ipnetwork", "network-address", "numeric"]}
dotenv = "0.15.0"
indicatif = "0.17.3"
ipnetwork = "0.18.0"
rayon = "1.5.1"
regex="1"
reqwest = {version="0.11.9", features=["blocking"]}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3.3"
