[package]
name = "wayback-rpki"
version = "0.1.0"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
edition = "2021"
default-run = "wayback-rpki"

[[bin]]
name = "wayback-rpki"
path = "src/bin/main.rs"


[dependencies]

anyhow = "1"
oneio = "0.16.7"
chrono = "0.4.38"
dotenv = "0.15.0"
indicatif = "0.17.3"
ipnet = "2.9"
rayon = "1.5.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
tracing = "0.1"
tracing-subscriber = "0.3.3"
ipnet-trie = { version = "0.2.0-beta.2", features = ["export"] }
bincode = "2.0.0-rc"

tabled = "0.15.0"

# api
axum = "0.7.5"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1", features = ["full"] }