[package]
name = "wayback-rpki"
version = "1.0.4"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/bgpkit/wayback-rpki"
documentation = "https://docs.rs/wayback-rpki"
default-run = "wayback-rpki"
description = "A command-line tool to provide API for RPKI ROAs lookup with historical data"
keywords = ["bgp", "network", "rpki"]

[[bin]]
name = "wayback-rpki"
path = "src/bin/main.rs"


[dependencies]

anyhow = "1"
oneio = { version = "0.19.0", default-features = false, features = ["https", "xz", "gz", "s3"] }
chrono = "0.4.38"
dotenvy = "0.15"
indicatif = "0.18.0"
ipnet = "2.9"
rayon = "1.5.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
reqwest = { version = "0.12.7", default-features = false, features = ["blocking"] }
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
tracing = "0.1"
tracing-subscriber = "0.3.3"
ipnet-trie = { version = "0.3.0", features = ["export"] }
bincode = "2.0.1"

tabled = "0.20.0"

# api
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
